--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
 body{
+    background-color: black;
+}
 
+h1{
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: center;
+    font-family: 'Courier New', Courier, monospace;
+    color: green;
 }
 
 #boxes{
@@ -7,7 +14,6 @@ body{
     padding: 20px;
     margin: auto;
     border: 2px;
-    border-style: green;
     justify-content: space-between;
     align-items: stretch;
     flex-wrap: wrap;
@@ -17,10 +23,19 @@ body{
 .groupBox{
     width: 200px;
     height: 200px;
-    background:linear-gradient(green,white);
+    background:linear-gradient(green, black);
     font-size: 25px;
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    border-radius: 10px;
+    border: 2px solid green;
+    cursor: pointer;
+    box-shadow: 10px;
 }
+
+.groupBox:hover{
+    background:linear-gradient(blue, black);
+}
+
 
 
